--- a/PositionIn/Classes/Application Layer/Stories/Membership/Interface/MPesaDetails/MPesaIndicatorView.xib
+++ b/PositionIn/Classes/Application Layer/Stories/Membership/Interface/MPesaDetails/MPesaIndicatorView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -28,7 +28,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment Completed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a2f-A4-vAC">
-                    <rect key="frame" x="123" y="100" width="155" height="21"/>
+                    <rect key="frame" x="122" y="114" width="156" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.33333333333333331" green="0.65490196078431373" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -37,8 +37,10 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="i6p-db-fkN" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="LMU-hU-G5N"/>
+                <constraint firstItem="glC-gK-Wnx" firstAttribute="top" secondItem="i6p-db-fkN" secondAttribute="bottom" constant="13" id="TTN-He-oNi"/>
                 <constraint firstItem="EeY-WJ-dRb" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Wn6-cu-NnL"/>
                 <constraint firstItem="a2f-A4-vAC" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dtA-6U-gcC"/>
+                <constraint firstItem="a2f-A4-vAC" firstAttribute="top" secondItem="EeY-WJ-dRb" secondAttribute="bottom" constant="13" id="hBM-sE-e12"/>
                 <constraint firstItem="EeY-WJ-dRb" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="ldg-Fv-jXg"/>
                 <constraint firstItem="a2f-A4-vAC" firstAttribute="top" secondItem="i6p-db-fkN" secondAttribute="bottom" constant="13" id="rQm-9C-MaZ"/>
                 <constraint firstItem="i6p-db-fkN" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="rl6-h7-Nka"/>
@@ -47,6 +49,12 @@
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="vwz-PH-6jk"/>
+                    <exclude reference="rQm-9C-MaZ"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="activityIndicatorView" destination="i6p-db-fkN" id="li4-jJ-woV"/>
                 <outlet property="paymentCompletedImageView" destination="EeY-WJ-dRb" id="snG-3V-3IH"/>
