--- a/PositionIn/BoughtProductDetails/PositionIn.BoughtProductDetailsViewController.xib
+++ b/PositionIn/BoughtProductDetails/PositionIn.BoughtProductDetailsViewController.xib
@@ -100,14 +100,14 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4ND-O5-Ncp" userLabel="Pick-up availability">
                                     <rect key="frame" x="0.0" y="82" width="600" height="60"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Pick-up availability" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se5-Cz-wh8">
-                                            <rect key="frame" x="0.0" y="-82" width="122" height="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick-up availability" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se5-Cz-wh8">
+                                            <rect key="frame" x="8" y="8" width="584" height="17"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                                             <color key="textColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zqa-dk-vMy">
-                                            <rect key="frame" x="0.0" y="-82" width="28" height="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zqa-dk-vMy">
+                                            <rect key="frame" x="8" y="33" width="584" height="17"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -121,23 +121,35 @@
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
+                                        <constraint firstItem="se5-Cz-wh8" firstAttribute="top" secondItem="4ND-O5-Ncp" secondAttribute="top" constant="8" id="4n4-OV-Ny8"/>
                                         <constraint firstAttribute="trailing" secondItem="0jb-92-QYL" secondAttribute="trailing" id="66S-Z3-MYk"/>
+                                        <constraint firstItem="zqa-dk-vMy" firstAttribute="top" secondItem="4ND-O5-Ncp" secondAttribute="top" constant="8" id="DJB-ba-4Ca"/>
+                                        <constraint firstItem="zqa-dk-vMy" firstAttribute="leading" secondItem="4ND-O5-Ncp" secondAttribute="leading" constant="8" id="DZ5-GG-Lo2"/>
+                                        <constraint firstItem="se5-Cz-wh8" firstAttribute="leading" secondItem="4ND-O5-Ncp" secondAttribute="leading" constant="8" id="ETR-HD-4L4"/>
                                         <constraint firstAttribute="bottom" secondItem="0jb-92-QYL" secondAttribute="bottom" id="MZD-cP-hs3"/>
+                                        <constraint firstItem="zqa-dk-vMy" firstAttribute="top" secondItem="se5-Cz-wh8" secondAttribute="bottom" constant="8" id="Mn2-vI-VpJ"/>
+                                        <constraint firstAttribute="trailing" secondItem="se5-Cz-wh8" secondAttribute="trailing" constant="8" id="Ty9-DS-X5o"/>
                                         <constraint firstItem="0jb-92-QYL" firstAttribute="leading" secondItem="4ND-O5-Ncp" secondAttribute="leading" id="fKJ-YF-oj5"/>
                                         <constraint firstAttribute="height" constant="60" id="skB-Ts-A1Z"/>
+                                        <constraint firstAttribute="trailing" secondItem="zqa-dk-vMy" secondAttribute="trailing" constant="8" id="x6a-3Q-FtR"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="DJB-ba-4Ca"/>
+                                        </mask>
+                                    </variation>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="azE-lo-KKm" userLabel="Quantity">
                                     <rect key="frame" x="0.0" y="142" width="600" height="60"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1HD-o4-XBZ">
-                                            <rect key="frame" x="0.0" y="-142" width="55" height="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1HD-o4-XBZ">
+                                            <rect key="frame" x="8" y="8" width="584" height="17"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                                             <color key="textColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Cy-T9-DQm">
-                                            <rect key="frame" x="0.0" y="-142" width="28" height="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Cy-T9-DQm">
+                                            <rect key="frame" x="8" y="33" width="584" height="17"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -152,9 +164,15 @@
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="scj-dV-3qU" secondAttribute="bottom" id="Jj5-kT-Gp5"/>
+                                        <constraint firstItem="9Cy-T9-DQm" firstAttribute="top" secondItem="1HD-o4-XBZ" secondAttribute="bottom" constant="8" id="N7x-Gd-uVM"/>
+                                        <constraint firstItem="1HD-o4-XBZ" firstAttribute="top" secondItem="azE-lo-KKm" secondAttribute="top" constant="8" id="PSe-Wx-Q0w"/>
+                                        <constraint firstItem="9Cy-T9-DQm" firstAttribute="leading" secondItem="azE-lo-KKm" secondAttribute="leading" constant="8" id="Sbc-Z1-cDA"/>
                                         <constraint firstAttribute="height" constant="60" id="WVV-qE-8UQ"/>
+                                        <constraint firstAttribute="trailing" secondItem="9Cy-T9-DQm" secondAttribute="trailing" constant="8" id="cF8-d2-nnu"/>
                                         <constraint firstAttribute="trailing" secondItem="scj-dV-3qU" secondAttribute="trailing" id="eNW-ew-1dt"/>
                                         <constraint firstItem="scj-dV-3qU" firstAttribute="leading" secondItem="azE-lo-KKm" secondAttribute="leading" id="kpU-1c-922"/>
+                                        <constraint firstAttribute="trailing" secondItem="1HD-o4-XBZ" secondAttribute="trailing" constant="8" id="lqI-7X-LlT"/>
+                                        <constraint firstItem="1HD-o4-XBZ" firstAttribute="leading" secondItem="azE-lo-KKm" secondAttribute="leading" constant="8" id="zfm-wd-Fhf"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pFF-mC-dT5" userLabel="Payment Method">
